--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="2; url=src/index.html">
+<meta http-equiv="Refresh" content="2; url=dist/marsa_alam/index.html">
